testdata/test/resources/com/yafred/asn1/test/should-fail/enumerated_duplicate_number.asn
-- FAIL duplicate number

Module DEFINITIONS ::= BEGIN

Enumeration1 ::= ENUMERATED {
a (0), 
b , 
c (0),  
...,
d 
}


END